SFDC Automation/src/objects/Meals_Events_Lodging_Transportation__c.object
<CustomObject>
    <description>Related to HQ Visit Object</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <label>Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_Visit_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HQ Visit</label>
        <referenceTo>HQ_Visit__c</referenceTo>
        <relationshipName>Request_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <label># of Rooms</label>
        <picklist>
            <controllingField>Request_Type_del__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Detail_del__c</fullName>
        <inlineHelpText>Provide more details at &quot;Comments&quot; section</inlineHelpText>
        <label>Request Detail</label>
        <picklist>
            <controllingField>Request_Type_del__c</controllingField>
            <picklistValues>
                <fullName>Baseball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadway / Play / Musical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ PM Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASCAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-site Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-site Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-site Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder Rep will coordinate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Request_Type_del__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>12 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>in_Party__c</fullName>
        <label># in Party</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Days__c</fullName>
        <label># of Days</label>
        <picklist>
            <controllingField>Request_Type_del__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meals/Events/Lodging/Transportation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Meals/Events/Lodging/Transportation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meals/Events/Lodging/Transportation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>